# NotepadQt

./: notepad_1.0.0_amd64.deb  notepad_3.0.0_amd64.deb  readme.md  readme.org
notepad/DEBIAN/: control
src/: .gitignore  CMakeLists.txt  Notepad.pro  advancesettingpage.cpp  advancesettingpage.h  config.h  content.h  editor.cpp  editor.h  filetreeview.cpp  filetreeview.h  finddialog.h  golinedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  md5dialog.cpp  notepad_2.0.0_amd64.deb  project.pri  readme.md  readme.org  resource.qrc  settingdialog.cpp  settingdialog.h  shortcutpage.cpp  shortcutpage.h  testdialog.cpp  testdialog.h  util.cpp  util.h
src/config/: status.json
src/notepad/DEBIAN/: changelog
src/notepad/usr/share/applications/: Notepad.desktop
src/src/: contact.cpp  contact.h  content.cpp  editor.cpp  editor.h  finddialog.cpp  golinedialog.cpp  mainwindow.cpp  md5dialog.cpp  md5dialog.h  replacedialog.cpp  replacedialog.h  resource.qrc  shortcutpage.cpp
src/src/config/: filetype.json  setting.json
src/style/: style.qss
src/tmp/: Notepad.pro
